--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "dotenv": "^16.0.2",
     "node-cron": "^3.0.2",
     "node-notifier": "^10.0.1",
-    "playwright": "^1.25.2"
+    "playwright": "^1.25.2",
+    "telegraf": "^4.9.1"
   }
 }
