--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.1.0",
     "node-cron": "^3.0.2",
     "node-notifier": "^10.0.1",
     "playwright": "^1.25.2"
